syntax = "proto3";

option csharp_namespace = "Cargo.GRPC.Server";
package grpc.health.v1;

service CargoHealthGrpc {
  rpc Check(CargoHealthCheckRequest) returns (CargoHealthCheckResponse);

  rpc Watch(CargoHealthCheckRequest) returns (stream CargoHealthCheckResponse);
}

message CargoHealthCheckRequest {
  string service = 1;
}

message CargoHealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}